feat(plugins/plugins-tutorials): getting started shouldn't focus on Apache Composer
also fixes rendering bugs e.g. with font zooming
Fixes #1127

--- a/plugins/plugin-tutorials/web/html/index.html
+++ b/plugins/plugin-tutorials/web/html/index.html
@@ -19,7 +19,7 @@
 
         <div class="tutorial-content">
           <div class="tutorial-top">
-            <div class="tutorial-left scrollable">
+            <div class="tutorial-left scrollable scrollable-auto">
               <!-- message to display while minimized -->
               <div class="tutorial-minimized-message"></div>
 
@@ -41,7 +41,7 @@
             </div> <!-- tutorial-left -->
 
             <div class="tutorial-right">
-              <div class="tutorial-content-extras tutorial-hide-when-minimized scrollable" tabIndex="0">
+              <div class="tutorial-content-extras tutorial-hide-when-minimized scrollable scrollable-auto" tabIndex="0">
                 <div class="tutorial-content-extras-as-structured-list tutorial-template"
                      id="tutorial-structured-list-template">
                   <h2 class="tutorial-content-extras-title">Next Steps</h2>
