fix(plugins/plugin-tutorials): remove old graphics from getting started
they are out of date

Fixes #2041

--- a/plugins/plugin-tutorials/web/html/index.html
+++ b/plugins/plugin-tutorials/web/html/index.html
@@ -3,7 +3,7 @@
   <body>
     <div id="tutorialPane" class="zoomable">
       <div class="tutorial-body">
-        <div class="tutorial-header">
+        <div class="tutorial-header sidecar-header">
           <div class="tutorial-header-names">
             <div class="tutorial-header-tutorial-name-stripe"><span class="tutorial-header-tutorial-name"></span></div>
             <div class="tutorial-heading"></div>
