chore: setup prettier for html & css files

--- a/packages/proxy/app/public/index.html
+++ b/packages/proxy/app/public/index.html
@@ -1,12 +1,10 @@
 <html>
+  <head>
+    <title>Kui Proxy</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+  </head>
 
-<head>
-  <title>Kui Proxy</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Kui Proxy</h1>
-</body>
-
+  <body>
+    <h1>Kui Proxy</h1>
+  </body>
 </html>
