--- a/plugins/plugin-tutorials/web/html/index.html
+++ b/plugins/plugin-tutorials/web/html/index.html
@@ -5,7 +5,9 @@
       <div class="tutorial-body">
         <div class="tutorial-header sidecar-header">
           <div class="tutorial-header-names">
-            <div class="tutorial-header-tutorial-name-stripe"><span class="tutorial-header-tutorial-name"></span></div>
+            <div class="tutorial-header-tutorial-name-stripe">
+              <span class="tutorial-header-tutorial-name"></span>
+            </div>
             <div class="tutorial-heading"></div>
           </div>
 
@@ -24,7 +26,7 @@
               <div class="tutorial-minimized-message"></div>
 
               <div class="tutorial-paragraphs tutorial-hide-when-minimized"></div>
-              
+
               <div class="tutorial-font-graphics tutorial-hide-when-minimized"></div>
 
               <div class="tutorial-learn-more tutorial-hide-when-minimized">
@@ -34,26 +36,23 @@
 
               <div class="tutorial-code-snippet bx--snippet bx--snippet--multi tutorial-hide-when-minimized">
                 <div class="bx--snippet-container" aria-label="Code Snippet">
-                  <pre><code></pre></code>
+                  <pre>
+                    <code></code>
+                  </pre>
                 </div>
-              </div> <!-- code snippet -->
-
-            </div> <!-- tutorial-left -->
+              </div>
+            </div>
 
             <div class="tutorial-right">
-              <div class="tutorial-content-extras tutorial-hide-when-minimized scrollable scrollable-auto" tabIndex="0">
-                <div class="tutorial-content-extras-as-structured-list tutorial-template"
-                     id="tutorial-structured-list-template">
+              <div class="tutorial-content-extras tutorial-hide-when-minimized scrollable scrollable-auto" tabindex="0">
+                <div class="tutorial-content-extras-as-structured-list tutorial-template" id="tutorial-structured-list-template">
                   <h2 class="tutorial-content-extras-title">Next Steps</h2>
                   <div class="tutorial-content-extras-body bx--structured-list">
                     <div class="bx--structured-list-thead">
-                      <div class="bx--structured-list-row bx--structured-list-row--header-row">
-                        <!-- header row -->
-                      </div>
-                    </div> <!-- structured list thead -->
-                    <div class="bx--structured-list-tbody">
-                    </div> <!-- structured list tbody -->
-                  </div> <!-- structured list -->
+                      <div class="bx--structured-list-row bx--structured-list-row--header-row"></div>
+                    </div>
+                    <div class="bx--structured-list-tbody"></div>
+                  </div>
                 </div>
               </div>
               <div class="tButtonGroup">
@@ -62,12 +61,12 @@
                 <button class="bx--btn bx--btn--secondary tBack">Back</button>
                 <button class="bx--btn bx--btn--primary tNext">Next</button>
               </div>
-            </div> <!-- tutorial-right -->
-          </div> <!-- tutorial-top -->
+            </div>
+          </div>
 
           <div class="tutorial-bottom"></div>
-        </div> <!-- tutorial-content -->
-      </div> <!-- tutorial-body -->
-    </div> <!-- tutorialPage -->
+        </div>
+      </div>
+    </div>
   </body>
 </html>
