--- a/plugins/plugin-openwhisk/tests/data/openwhisk/hello-with-script.html
+++ b/plugins/plugin-openwhisk/tests/data/openwhisk/hello-with-script.html
@@ -1,8 +1,7 @@
 <html>
-  <head>
-  </head>
+  <head> </head>
   <body>
-    <div id='hello'></div>
-    <script src='hello-with-script.js'></script>
+    <div id="hello"></div>
+    <script src="hello-with-script.js"></script>
   </body>
 </html>
